# Rotary-LED-Display

./: README.md
3d-files/: rotary-LED-display.f3d
3d-files/stl-files/: base-upper-part.stl  base.stl  gear-big.stl  gear-small.stl  middle-part-rotation.stl  rod-left.stl  rod-right.stl  stabilisation-upper-part.stl
code/: display_RPi.py  image.json
code/display_dotStar_arduino/include/: spi_controller.hpp
code/display_dotStar_arduino/src/: LED.cpp  main.cpp  spi_controller.cpp
code/display_rpi/: CMakeLists.txt
code/display_rpi/include/: Image.hpp  RPi_DotStar.hpp  hardware_controller.hpp  image_processor.hpp  pixel.hpp  rotation_controller.hpp
code/display_rpi/src/: RPi_DotStar.cpp  hardware_controller.cpp  image_processor.cpp  main.cpp  pixel.cpp  rotation_controller.cpp
code/display_rpi_qt/: LED.cpp  LED.hpp  RPi_DotStar.hpp  display_rpi_qt.pro  hardware_controller.cpp
code/display_tests/src/: main.cpp
code/display_version_1/: platformio.ini
code/display_version_1/include/: LED.h
code/display_version_1/src/: LED.cpp  main.cpp
code/display_version_dotStar/: platformio.ini
code/display_version_dotStar/include/: Image.h  LED.h  RPi_DotStar.h
code/display_version_dotStar/src/: LED.cpp  RPi_DotStar.cpp  main.cpp
code1/display_version_1/include/: Image.h
code1/display_version_dotStar/include/: Image.h  LED.h
code1/display_version_dotStar/src/: main.cpp
dataSheets/: Wichtige Informationen NeoPixel.docx
dataSheets/16051200/: 16051200.stp
dataSheets1/16021000/: 16021000.stp
imageResources/: Smile.jfif  Smile.rgb  Unbenannt.c
imageResources1/: Smile.c
printables/: Drehstab_M_Hall.stl  Drehstab_O_Hall.stl  Fuss.stl  Mittel_DrehTeil.stl  Mittelteil.stl  Motor_Zahnrad_2.stl  Motor_Zahnrad_3.stl  Stator.stl  Stator_V2.stl  Stuetze_Hinten.stl  Test01_Stator.stl  Test02_Stator.stl  Test03_Stator.stl  Test_mittelteil.stl
printables1/: Dreh_Mitte.stl  Motor_Zahnrad.stl  Stator.stl  Test_Slipring.stl  Test_Stator.stl  Zahnrad.stl
